# Voicevox-synthesis

./: .gitignore  Readme.md  pyproject.toml
src/: __init__.py  main.py
